<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.xipherlabs.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorBackground">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_myApps"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_below="@id/textView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        >


        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/media_streamer"
            android:id="@+id/btn_streamer"
            android:layout_marginTop="@dimen/button_vertical"
            android:background="@color/colorAccent"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/super_duo1"
            android:id="@+id/btn_super_duo1"
            android:layout_marginTop="@dimen/button_vertical"
            android:background="@color/colorAccent"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/super_duo2"
            android:id="@+id/btn_super_duo2"
            android:layout_marginTop="@dimen/button_vertical"
            android:background="@color/colorAccent"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ant_terminator"
            android:id="@+id/btn_ant_terminator"
            android:layout_marginTop="@dimen/button_vertical"
            android:background="@color/colorAccent"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/materialize"
            android:id="@+id/btn_materialize"
            android:layout_marginTop="@dimen/button_vertical"
            android:background="@color/colorAccent"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/btn_capstone"
            android:layout_marginTop="@dimen/button_vertical"
            android:background="@color/colorAccent"/>



    </LinearLayout>


</RelativeLayout>
